--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,18 @@
 page-home {
-
+    .swiper-button-next,
+    .swiper-button-prev {
+        background-image: none;
+        background-color: transparent;
+        top: unset;
+        bottom: -10px;
+        -webkit-box-shadow: none;
+        box-shadow: none;
+    }
+    .ion-md-arrow-dropright,
+    .ion-md-arrow-dropleft {
+        font-size: 3em;
+    }
+    .swiper-pagination-bullet-active {
+        background: white;
+    }
 }
