--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,6 +1,4 @@
 // http://ionicframework.com/docs/theming/
-
-
 // App Global Sass
 // --------------------------------------------------
 // Put style rules here that you want to apply globally. These
@@ -14,3 +12,12 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+.centered-div {
+    position: absolute;
+    text-align: center;
+    margin: auto;
+    top: 35%;
+    bottom: 0;
+    right: 0;
+    left: 0;
+}
