--- a/src/pages/welcomescreen/welcomescreen.scss
+++ b/src/pages/welcomescreen/welcomescreen.scss
@@ -1,8 +1,22 @@
 page-welcomescreen {
     @import url('https://fonts.googleapis.com/css?family=Roboto');
     $anroidWelcomescreenAndroidFont: 'Roboto', sans-serif;
+    $backgroundColor: rgb(113, 128, 147);
+    $textColor: rgb(244, 253, 255);
+    .content {
+        background-color: $backgroundColor;
+        color: $textColor;
+    }
     .content-md,
     .toolbar-title-md {
         font-family: $anroidWelcomescreenAndroidFont;
+    }
+    .toolbar-md {
+        .back-button-md {
+            display: none;
+        }
+        .title-md {
+            padding-left: 50px;
+        }
     }
 }
