Addidng the font sizes

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -21,3 +21,15 @@
     right: 0;
     left: 0;
 }
+
+.slide-title {
+    font-size: 36px;
+}
+
+.slide-subtitle {
+    font-size: 28px;
+}
+
+.slide-desc {
+    font-size: 16px;
+}
